Provide a template for the version in which RFC 2086 compatibility support may be dropped.

--- a/doc/source/_static/cyrus.css
+++ b/doc/source/_static/cyrus.css
@@ -6,6 +6,10 @@ a tt {
     color: #1f8fc0;
 }
 
+a.internal em {
+    font-style: normal;
+}
+
 blockquote.epigraph div p {
     font-style: italic;
 }
