implications and limitations, yeah

--- a/doc/source/_static/cyrus.css
+++ b/doc/source/_static/cyrus.css
@@ -122,6 +122,10 @@ ol.arabic li {
     margin-top: 1em;
 }
 
+p.caption {
+    font-style: italic;
+}
+
 /* For bold-italic and italic inside other formatting styles */
 /* ``command line `` :italic:`with italics`
  */
