Brought over the 'about' files from cyrusimnap with some updates   - who_is_cyrus still needs an update   - cyrus_bylaws is also consequently probably out of date   - cyrus_roadmap no longer contains a detailed roadmap as we aren't using     bugzilla any more and there wasn't enough to make sense of what's in     phabricator/maniphest.

--- a/doc/source/_static/cyrus.css
+++ b/doc/source/_static/cyrus.css
@@ -113,6 +113,7 @@ div.related ul li a {
     color: #1F8FC0;
 }
 
+
 div.sphinxsidebar h3, div.sphinxsidebar h4 {
     background-color: #002e50;
     border: 1px solid white;
@@ -139,3 +140,35 @@ p.caption {
     font-style: italic;
 }
 
+.pageheader {
+    background-image: url(headimg.gif);
+    text-align: left;
+    padding: 10px 15px;
+}
+
+.pageheader ul {
+    float: right;
+    color: white;
+    list-style-type: none;
+    padding-left: 0;
+    margin-top: 30px;
+    margin-right: 10px;
+}
+
+.pageheader li {
+    float: left;
+    margin: 0 0 0 10px; 
+}
+
+.pageheader li a {
+    border-radius: 1px;
+    padding: 8px 12px;
+    color: #f9f9f0;
+    text-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+}
+
+.pageheader li a:hover {
+    background-color: #f9f9f0;
+    color: #0a507a;
+    text-shadow: none;
+}
