Generate :cyrusman: pages which point to the proper repo.
Docs no longer at cyrusimap.org/new, just at cyrusimap.org

--- a/doc/source/_static/cyrus.css
+++ b/doc/source/_static/cyrus.css
@@ -200,6 +200,13 @@ p.caption {
     background-color: #2d9dcb;
 }
 
+.wy-side-nav-search a img {
+        margin-bottom: 0px;
+}
+
+.wy-side-nav-search a:hover {
+    background-color: #2d9dcb;
+}
 
 .wy-side-nav-search img {
     border-radius: initial;
