Cleaning up the hierarchy and structure to make it easier for readers to get to what they're after in just a couple of clicks.
(from Nicola - top commit on cyrus-docs which didn't merge properly)

--- a/doc/source/_static/cyrus.css
+++ b/doc/source/_static/cyrus.css
@@ -137,6 +137,14 @@ p.caption {
     font-style: italic;
 }
 
+.caption-text {
+    font-size: 60%
+}
+
+nav.wy-nav-side p.caption {
+    font-size: 150%
+}
+
 /* For bold-italic and italic inside other formatting styles */
 /* ``command line `` :italic:`with italics`
  */
